tests/files/type_checker_tests/should_fail/010.cmdr
//Should fail when doing minus on something that isn't a float or int
x = -true;